# rapidpro-flow-toolkit

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  conversation_parser_v2.py  coverage.sh  data.json  main.py  models.py  old_pyproject.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: cell_parser.md  components.md  content_index.md  development.md  google.md  logging.md  models.md  notation.md  rapidpro.md  row_types.md  sheets.md  surveys.md  temp-testing-conversion.md
logger/: logger.py
parsers/common/: cellparser.py  rowdatasheet.py  rowparser.py  sheetparser.py
parsers/common/tests/: mock_cell_parser.py  mock_row_parser.py  mock_sheetparser.py  test_cellparser.py  test_differentways.py  test_full_rows.py  test_rowdatasheet.py  test_sheetparser.py  test_unparse.py
parsers/creation/: campaignparser.py  contentindexparser.py  contentindexrowmodel.py  flowparser.py  flowrowmodel.py  standard_models.py  standard_parser.py  standard_parser_models.py  tagmatcher.py  template_sheet_parser.py  timed_core_models.py  timed_core_parser.py  utils.py
parsers/creation/tests/: row_data.py  test_contentindexparser.py  test_flowparser.py  test_standard_parser.py  test_tagmatcher.py  test_to_row_model.py
parsers/sheets/: google_sheet_reader.py
rapidpro/models/: actions.py  campaigns.py  common.py  containers.py  exceptions.py  nodes.py  routers.py
rapidpro/tests/: test_actions.py  test_containers.py  test_import_export.py  test_import_export_actions.py  test_routers.py
src/rapidpro_flow_tools/: cli.py  converters.py  flow_converter.py
src/rapidpro_flow_tools/logger/: logger.py
src/rapidpro_flow_tools/tests/: test_contentindexparser.py  test_flowparser.py  test_flowparser_reverse.py  test_template_sheet_parser.py  utils.py
src/rpft/: cli.py  converters.py  google.py  sources.py
src/rpft/logger/: __init__.py  logger.py
src/rpft/parsers/: sheets.py  universal.py
src/rpft/rapidpro/: sim_utils.py  simulation.py  utils.py
tests/: __init__.py  mock_sheetparser.py  mocks.py  models.py  row_data.py  test_actions.py  test_cellparser.py  test_containers.py  test_contentindexparser.py  test_converters.py  test_csv_sheet_reader.py  test_differentways.py  test_dispatcher.py  test_flowparser.py  test_flowparser_reverse.py  test_full_rows.py  test_import_export.py  test_model_inference.py  test_nodes.py  test_routers.py  test_rowdatasheet.py  test_rowparser.py  test_sheet_reader.py  test_sheetparser.py  test_sources.py  test_standard_parser.py  test_standard_parser_reverse.py  test_surveyparser.py  test_tagmatcher.py  test_template_preserver.py  test_template_sheet_parser.py  test_timed_core_parser.py  test_to_row_model.py  test_universal.py  test_unparse.py  utils.py
tests/datarowmodels/: evalmodels.py  listmodel.py  minimalmodel.py  nestedmodel.py  simplemodel.py
tests/input/: groups_and_flows.csv  loop_from_start.csv  no_switch_nodes.csv  no_switch_nodes_without_row_ids.csv  rejoin.csv  switch_nodes.csv  timed_core_wrappers.csv
tests/output/: all_test_flows.json  timed_core_flows.json
(+215 files in other folders)
