[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpft"
version = "1.0.1"
description = "Toolkit for using spreadsheets to create and modify RapidPro flows"
authors = [
    {name = "IDEMS International", email = "communications@idems.international"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["rapidpro", "flow", "tools", "toolkit"]
license = {text = "LGPL-2.1-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "Jinja2~=3.0.3",
    "google-api-python-client~=2.6.0",
    "google-auth-oauthlib~=0.4.4",
    "networkx~=2.5.1",
    "openpyxl~=3.0.7",
    "pydantic~=1.8.2",
    "tablib[ods]>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
Repository = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"

[project.scripts]
rpft = "rpft.cli:main"
