[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
dynamic = ["version"]
name = "rpft"
description = "Toolkit for using spreadsheets to create and modify RapidPro flows"
authors = [
    {name = "IDEMS International", email = "contact@idems.international"},
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["rapidpro", "flow", "tools", "toolkit"]
license = "LGPL-2.1-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "Jinja2~=3.0.3",
    "google-api-python-client ~= 2.174",
    "google-auth-oauthlib ~= 1.2",
    "networkx~=2.5.1",
    "odfpy",
    "openpyxl",
    "pydantic >= 2",
    "python-benedict",
    "tablib ~= 3.8",
]

[project.urls]
Homepage = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"
Repository = "https://github.com/IDEMSInternational/rapidpro-flow-toolkit"

[project.scripts]
rpft = "rpft.cli:main"

[tool.setuptools_scm]
